[package]
name = "minbft"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Efficient Byzantine Fault-Tolerance in the partially synchronous timing model"
documentation = "https://docs.rs/minbft/latest/minbft/"
repository = "https://github.com/abcperf/minbft"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-ids = "0.11.0"
usig = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
derivative = "2.2"
tracing = "0.1.10"
blake2 = "0.10"
serde_bytes = "0.11.5"
either = "1.8.1"
serde_with = "3.6.0"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.16.0"
rand = "0.8.5"

test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
